# deadbolt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  cliff.toml  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  renovate.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  cli.md  core-auth.md  getting-started.md  index.md  reference.md  security.md  threat-model.md
docs/adr/: 0001-record-architecture-decisions.md  0002-framework-agnostic-core.md
docs/concepts/: adapters.md  architecture.md  hooks.md  plugins.md  sessions.md
docs/integrations/: fastapi.md  flask.md  generic.md
docs/javascripts/: announce.js
docs/plugins/: admin.md  anonymous.md  api-keys.md  bearer.md  captcha.md  device-authorization.md  email-otp.md  haveibeenpwned.md  jwt.md  magic-link.md  multi-session.md  oauth.md  oidc-provider.md  one-time-token.md  organization.md  passkeys.md  phone.md  siwe.md  totp.md  username.md
docs/stylesheets/: extra.css
examples/: fastapi_app.py
overrides/: main.html
src/deadbolt/: __init__.py  _csrf.py  _sync.py  _util.py  errors.py  protocols.py  ratelimit.py
src/deadbolt/cli/: __init__.py
src/deadbolt/core/: __init__.py  api.py  auth.py  config.py  router.py
src/deadbolt/crypto/: __init__.py  cookies.py  encryption.py  keys.py  passwords.py  tokens.py
src/deadbolt/db/: __init__.py  memory.py  sqlalchemy_async.py  types.py
src/deadbolt/endpoints/: __init__.py  _service.py  accounts.py  context.py  email_password.py  registry.py  sessions.py  user.py  verification.py
src/deadbolt/hooks/: __init__.py
src/deadbolt/http/: __init__.py  messages.py  multidict.py
src/deadbolt/integrations/: __init__.py  _common.py  asgi.py  fastapi.py  flask.py  wsgi.py
src/deadbolt/models/: __init__.py
src/deadbolt/plugins/: __init__.py  admin.py  anonymous.py  api_keys.py  bearer.py  captcha.py  device_authorization.py  email_otp.py  haveibeenpwned.py  jwt.py  magic_link.py  multi_session.py  oauth.py  oidc_provider.py  one_time_token.py  organization.py  passkeys.py  phone.py  siwe.py  totp.py  username.py
src/deadbolt/session/: __init__.py  manager.py
tests/: _fixture_app.py  _helpers.py  test_account_management.py  test_admin.py  test_anonymous.py  test_api_keys.py  test_bearer.py  test_captcha.py  test_cli.py  test_crypto.py  test_device_authorization.py  test_edge_cases.py  test_email_otp.py  test_endpoints.py  test_form_body.py  test_haveibeenpwned.py  test_hooks.py  test_jwt.py  test_maintenance.py  test_more_coverage.py  test_multi_session.py  test_oauth.py  test_oidc_provider.py  test_one_time_token.py  test_organization.py  test_passkeys.py  test_phone.py  test_plugins.py  test_public_api.py  test_scaffolding.py  test_security.py  test_session.py  test_siwe.py  test_sqlalchemy_adapter.py  test_totp.py  test_username.py  test_validation.py
tests/contract/: test_adapter_conformance.py
tests/integrations/: test_asgi.py  test_common.py  test_fastapi.py  test_flask.py  test_wsgi.py
