[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "deadbolt"
dynamic = ["version"]
description = "A framework-agnostic, batteries-included authentication library for Python."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "the deadbolt contributors" }]
keywords = ["authentication", "auth", "sessions", "oauth", "security", "framework-agnostic"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "cryptography>=43",
    "anyio>=4.4",
    "sniffio>=1.3",
]

[project.urls]
Homepage = "https://github.com/ruban-s/deadbolt"
Documentation = "https://deadbolt.readthedocs.io"
Source = "https://github.com/ruban-s/deadbolt"
Issues = "https://github.com/ruban-s/deadbolt/issues"
Changelog = "https://github.com/ruban-s/deadbolt/blob/main/CHANGELOG.md"

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy[asyncio]>=2.0"]
redis      = ["redis>=5.0"]
jwt        = ["pyjwt[crypto]>=2.13"]
jose       = ["joserfc>=1.7"]
oauth      = ["authlib>=1.3", "httpx>=0.27"]
passkeys   = ["webauthn>=2.0"]
totp       = ["pyotp>=2.9"]
ratelimit  = ["limits>=3.13"]
email      = ["aiosmtplib>=3.0"]
fastapi    = ["fastapi>=0.115", "starlette>=0.40"]
starlette  = ["starlette>=0.40"]
litestar   = ["litestar>=2.12"]
flask      = ["flask>=3.0"]
django     = ["django>=4.2"]
all = [
    "deadbolt[sqlalchemy,redis,jwt,jose,oauth,passkeys,totp,ratelimit,email,fastapi,litestar,flask,django]",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "anyio>=4.4",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "testcontainers[postgres,redis]>=4",
    "aiosqlite>=0.20",
    "ruff>=0.15",
    "mypy>=1.11",
    "basedpyright>=1.20",
    "pre-commit>=3.7",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/deadbolt"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "SIM", "TCH", "PL", "BLE", "DTZ", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["deadbolt"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src", "tests"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
files = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["deadbolt"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]
